<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Comcast STB</string>
    <string name="hint_email">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Sign In</string>
    <string name="txt_empty"></string>
    <string name="movie">VoD</string>
    <string name="radio">Radio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="purchase_channel_title">Buy Channel</string>
    <string name="purchase_movie_title">Buy Movie</string>
    <string name="purchase_body">You must purchase this element first to view it\'s contents.</string>
    <string name="buy_success">Purchase Successful</string>
    <string name="user_info">User Ifo</string>
    <string name="packages">Packages</string>
    <string name="orders">Orders</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="user_id">User ID</string>
    <string name="user_name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="group_id">Group ID</string>
    <string name="status">Status</string>
    <string name="created_at">Created At</string>
    <string name="updated_at">Updated At</string>
    <string name="balance">Balance</string>
    <string name="details">Details</string>
    <string name="mac">Box ID:</string>
    <string name="group">Group Name:</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="storeLogo">storeLogo</string>
    <string name="fm">FM-</string>
    <string name="settings">Settings</string>
    <string name="live_tv">Live TV</string>
    <string name="movie_packages">Movie Packages</string>
    <string name="channel_packages">Channel Packages</string>
    <string name="movie_image">movieImage</string>
    <string name="purchase">Purchase</string>
    <string name="cancel">cancel</string>
    <string name="no_movie">No Movie added to this category yet.</string>
    <string name="current_selection">Currrent Selection: </string>
    <string name="purchase_history">Purchase History</string>
    <string name="no_subscription">Subscription History not available.</string>
    <string name="categories">Categories</string>
    <string name="current_position">Current position:</string>
    <string name="channels">Channels</string>
    <string name="channel_package">Channel Packages</string>
    <string name="movie_package">Movie Packages</string>
    <string name="elements">Elements</string>
    <string name="price">Price:</string>
    <string name="expiry_at">Expiry At:</string>
    <string name="type">Package Type:</string>
    <string name="info">info</string>
    <string name="purchase_successful_body"> successfully bought</string>
    <string name="txt_description">Channel Description</string>
    <string name="no_content">Nothing to show</string>
    <string name="description_demo">Enjoy this channel in HD,only on Comcast STB.</string>
    <string name="txt_movie_description">Movie Description</string>
    <string name="nothing_selected">No Content Selected.\nPlease select a channel to play.</string>
    <string name="dismiss">dismiss</string>
    <string name="error_header">Error Occured</string>
    <string name="retry">retry</string>
    <string name="id">ID</string>
    <string name="order_id">Order ID</string>
    <string name="subs_id">Subscription ID</string>
    <string name="promo_text">Watch TV\nShows and Movies\nIn HD\nAt affordable\nPrice</string>
    <string name="txt_package_description">Package Desciption</string>
    <string name="spinner_title">Select Months</string>
    <string-array name="month_array">

        <item>1</item>

        <item>3</item>

        <item>6</item>

        <item>9</item>

        <item>12</item>

    </string-array>

    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="selection_disabled">Disabled</string>

    <string name="selection_default">Default</string>

    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>

    <string name="enable_random_adaptation">Enable random adaptation</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>

    <string name="ima_not_loaded">Playing sample without ads, as the IMA extension was not loaded</string>
    <string name="title_permissions">Permissions</string>
    <string name="message_permissions"><![CDATA[To allow ComCast STB to process audio stream app needs an access to your <b>Microphone</b>.]]></string>
    <string name="allow">allow</string>
    <string name="btn_cancel">cancel</string>
    <string name="toast_permissions_not_granted">Permissions not granted.</string>
    <string name="error_epg">Error Loading Epg.\nEpg couldn\'t be loaded</string>
    <string name="description_demo_movie">Watch Movies in HD only on Comcast STB.</string>
    <string name="confirm_purchase">Are you sure you want to purchase this Movie?</string>
    <string name="title_activity_package">Value Added Packages</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_movie_simple">MovieSimpleActivity</string>
    <string name="language">Language</string>
</resources>
