<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:id="@+id/txt_infoHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/error_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white_color" />

    <TextView
        android:id="@+id/txt_infoBody"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white_color"
        android:text="Error Body"
        android:gravity="center"
        android:maxLines="4"
        android:padding="10dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
    <View
        android:id="@+id/info_view1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="-10dp"
        android:layout_marginRight="-10dp"
        android:layout_marginTop="20dp"
        android:background="@color/white_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textColor="@color/white_color"
            android:background="@drawable/button_selector"
            android:text="@string/retry"
            android:textAllCaps="true"/>
        <Button
            android:id="@+id/btn_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white_color"
            android:background="@drawable/button_selector"
            android:textAllCaps="true"
            android:text="@string/dismiss" />
    </LinearLayout>

</LinearLayout>