<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@drawable/icon_selector"
        android:weightSum="4">
        <TextView
            android:id="@+id/txt_acc_user"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/user_info"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/account_selector"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"
            android:textColor="@color/white_color"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white_color"/>
        <TextView
            android:id="@+id/txt_acc_package"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/account_selector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/packages"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white_color"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white_color"/>
        <TextView
            android:id="@+id/txt_acc_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/orders"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white_color"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/account_selector"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white_color"/>
        <TextView
            android:id="@+id/txt_acc_subscription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subscriptions"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white_color"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/account_selector"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:id="@+id/account_container"
        android:orientation="vertical" />
</LinearLayout>
