<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launcher_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|right"
        android:padding="10dp"
        android:textStyle="bold"
        android:text="@string/purchase_history"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white_color" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/txt_subs_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/white_color"
                    android:text="@string/subscriptions"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/subscription_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txt_order_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="@color/white_color"
                android:text="@string/orders"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/order_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp" />
        </LinearLayout>

        </LinearLayout>

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/progressbar_subscription"
            style="@style/AVLoadingIndicatorView.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            app:indicatorColor="@color/white_color"
            app:indicatorName="BallTrianglePathIndicator" />

        <TextView
            android:id="@+id/txt_nosubscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/no_subscription"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>




