<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.crostinotv.stb.livetv.MenuFragment">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@color/transp_20_primary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_category_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/categories"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white_color"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_category_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp" />
    </LinearLayout>

    <View
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transp_20_primary">

        <TextView
            android:id="@+id/txt_current_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text="@string/current_position"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/current_channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/txt_current_label"
            android:padding="10dp"
            android:text="Test Channel"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/txt_channel_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text="@string/channels"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white_color"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_channel_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txt_channel_label"
            android:padding="10dp" />
    </RelativeLayout>


</LinearLayout>
