<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launcher_bg"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="10dp"
        android:text="@string/packages"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white_color"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/transp_20_primary"
            android:weightSum="2">

            <TextView
                android:id="@+id/txt_channel_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/channel_package"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white_color" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/channel_package_recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="10dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:padding="10dp"
                android:background="@android:color/white" />
            <TextView
                android:id="@+id/txt_movie_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/category_list_selector"
                android:padding="10dp"
                android:text="@string/movie_package"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white_color" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/movie_package_recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="10dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/progressbar_package"
            style="@style/AVLoadingIndicatorView.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            app:indicatorColor="@color/white_color"
            app:indicatorName="BallTrianglePathIndicator" />
    </FrameLayout>


</LinearLayout>
